--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ffffff" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico"> 
     <title>Binary Blinker</title>
   </head>
   <body>
