--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#ffffff" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico"> 
-    <title>Binary Blinker</title>
+    <meta name="theme-color" content="#000000" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <title>Binary Blinker — Visible Light Communication</title>
+    <meta
+      name="description"
+      content="Binary Blinker is a browser-based prototype for transmitting and scanning binary data using visible light."
+    />
+    <meta property="og:title" content="Binary Blinker" />
+    <meta
+      property="og:description"
+      content="Transmit and scan binary data using visible light in the browser."
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
