--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <title>Binary Blinker — Visible Light Communication</title>
+    <title>Binary Blinker</title>
     <meta
       name="description"
       content="Binary Blinker is a browser-based prototype for transmitting and scanning binary data using visible light."
